Add support to Antrophic

--- a/notebooks/agent/agent.ipynb
+++ b/notebooks/agent/agent.ipynb
@@ -9,6 +9,13 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
    "outputs": [],
@@ -51,15 +58,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Request failed: 400 Client Error: Bad Request for url: https://api.anthropic.com/v1/messages\n",
-      "('400 Client Error: Bad Request for url: https://api.anthropic.com/v1/messages', {})\n"
+      "The capital of Chile is Santiago (officially Santiago de Chile). It is also the largest city in Chile and serves as the country's political, economic, and cultural center.\n"
      ]
     }
    ],
@@ -69,23 +75,16 @@
     "msgs = [\n",
     "    LLMMessage(\n",
     "        role=LLMMessage.MessageRole.USER,\n",
-    "        content=\"What is the capital of France?\"\n",
+    "        content=\"What is the capital of Chile?\"\n",
     "    )\n",
     "]\n",
     "\n",
-    "response = llm.get_answer(\n",
+    "text, response = llm.get_answer(\n",
     "    messages=msgs\n",
     ")\n",
     "\n",
-    "print(response)"
+    "print(text)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
