Improve LLM model configuration, now model_id as interface for instance LLMProvider

--- a/notebooks/agent/agent.ipynb
+++ b/notebooks/agent/agent.ipynb
@@ -9,26 +9,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "from debiasing.llm.models import OpenAICompletion\n",
-    "from debiasing.llm.models import Antrophic\n",
-    "from debiasing.llm.models import LLMMessage\n",
-    "from debiasing.configs import settings"
+    "from debiasing.llm.models import AntrophicCompletion\n",
+    "from debiasing.llm.models import LLMMessage"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -40,7 +32,7 @@
     }
    ],
    "source": [
-    "llm = OpenAICompletion()\n",
+    "openai = OpenAICompletion()\n",
     "\n",
     "msgs = [\n",
     "    LLMMessage(\n",
@@ -49,7 +41,7 @@
     "    )\n",
     "]\n",
     "\n",
-    "text, response = llm.get_answer(\n",
+    "text, response = openai.get_answer(\n",
     "    messages=msgs\n",
     ")\n",
     "\n",
@@ -58,19 +50,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The capital of Chile is Santiago (officially Santiago de Chile). It is also the largest city in Chile and serves as the country's political, economic, and cultural center.\n"
+      "The capital of Chile is Santiago.\n"
      ]
     }
    ],
    "source": [
-    "llm = Antrophic()\n",
+    "# Ref: Antrophic models https://docs.anthropic.com/en/docs/about-claude/models\n",
+    "antrophic = AntrophicCompletion(model_id = 'claude-3-opus-20240229')\n",
     "\n",
     "msgs = [\n",
     "    LLMMessage(\n",
@@ -79,12 +72,19 @@
     "    )\n",
     "]\n",
     "\n",
-    "text, response = llm.get_answer(\n",
+    "text, response = antrophic.get_answer(\n",
     "    messages=msgs\n",
     ")\n",
     "\n",
     "print(text)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
