Update usecase of the model interfaces with tool use and structured output

--- a/notebooks/agent/debiasing-doc.ipynb
+++ b/notebooks/agent/debiasing-doc.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -116,9 +116,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Oh, I'm feeling as chipper as a squirrel on a caffeine high! How about you? Are you ready to tackle the day or just trying to figure out if that last slice of pizza is calling your name? 🍕😄\n",
+      "Oh, I'm doing just dandy, thank you! I'm like a digital jester, always ready to juggle some words and tickle your funny bone. How about you? Are you ready for some giggles and guffaws today?\n",
       "--------------------------------------------------------------------------------\n",
-      "I'm just a computer program, so I don't have feelings, but I'm here and ready to help you! How can I assist you today?\n"
+      "Thank you for asking! I'm just a computer program, so I don't have feelings, but I'm here and ready to help you. How can I assist you today?\n"
      ]
     }
    ],
@@ -149,9 +149,9 @@
      "text": [
       "Hello! I'm an experienced data scientist with over a decade of experience working on enterprise-scale analytics and machine learning projects. In my current role at a Fortune 500 company, I focus on leveraging data science to drive business value through predictive modeling, optimization, and advanced analytics solutions.\n",
       "\n",
-      "I have extensive experience with Python, R, SQL, and various ML frameworks, and I've led numerous successful projects in areas like customer analytics, supply chain optimization, risk modeling, and marketing attribution. I'm passionate about translating complex technical concepts into actionable business insights and helping organizations make data-driven decisions.\n",
+      "I have deep expertise in statistical analysis, machine learning algorithms, data visualization, and working with big data technologies. I regularly collaborate with cross-functional teams including business stakeholders, engineers, and product managers to deliver impactful data-driven solutions.\n",
       "\n",
-      "How can I help you today with your data science questions or challenges?\n",
+      "I'm passionate about translating complex technical concepts into actionable insights and helping organizations make better decisions through data. How can I help you today?\n",
       "--------------------------------------------------------------------------------\n",
       "Hi! I'm Claude, an AI assistant created by Anthropic. I aim to be direct and honest in my interactions. I'm happy to help with analysis, writing, math, coding and other tasks while being upfront about my capabilities and limitations. What would you like to discuss?\n"
      ]
@@ -299,7 +299,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -312,32 +312,32 @@
     {
      "data": {
       "text/plain": [
-       "{'id': 'chatcmpl-Agm1g3ADmNamb3avRoIxubx8zGH86',\n",
+       "{'id': 'chatcmpl-AgmsUUoh5NeDTDYPpIf1NjF2egayL',\n",
        " 'object': 'chat.completion',\n",
-       " 'created': 1734757752,\n",
-       " 'model': 'gpt-4o-mini-2024-07-18',\n",
+       " 'created': 1734761026,\n",
+       " 'model': 'gpt-4o-2024-08-06',\n",
        " 'choices': [{'index': 0,\n",
        "   'message': {'role': 'assistant',\n",
        "    'content': None,\n",
-       "    'tool_calls': [{'id': 'call_duosqaFs67v0DZN0twJ0ewFi',\n",
+       "    'tool_calls': [{'id': 'call_ipoAFLMHlfAosXh5aucKdw9L',\n",
        "      'type': 'function',\n",
-       "      'function': {'name': 'calculator',\n",
-       "       'arguments': '{\"operation\":\"divide\",\"number1\":28,\"number2\":3}'}}],\n",
+       "      'function': {'name': 'gender_bias_classifier',\n",
+       "       'arguments': '{\"bias_label\":[\"STEREOTYPING_BIAS\",\"SEXISM\"],\"bias_text\":[\"Debe ser profesora de preescolar porque enseña super bien sumas como 2 + 3\",\"no creo que sea ingenieria porque a las mujeres no les gusta eso\"],\"score_label\":[0.9,0.95]}'}}],\n",
        "    'refusal': None},\n",
        "   'logprobs': None,\n",
        "   'finish_reason': 'tool_calls'}],\n",
-       " 'usage': {'prompt_tokens': 308,\n",
-       "  'completion_tokens': 25,\n",
-       "  'total_tokens': 333,\n",
+       " 'usage': {'prompt_tokens': 705,\n",
+       "  'completion_tokens': 79,\n",
+       "  'total_tokens': 784,\n",
        "  'prompt_tokens_details': {'cached_tokens': 0, 'audio_tokens': 0},\n",
        "  'completion_tokens_details': {'reasoning_tokens': 0,\n",
        "   'audio_tokens': 0,\n",
        "   'accepted_prediction_tokens': 0,\n",
        "   'rejected_prediction_tokens': 0}},\n",
-       " 'system_fingerprint': 'fp_0aa8d3e20b'}"
+       " 'system_fingerprint': 'fp_d28bcae782'}"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -358,8 +358,8 @@
     "msgs = [\n",
     "    LLMMessage(\n",
     "        role=LLMMessage.MessageRole.USER,\n",
-    "        content=calculator_example,\n",
-    "        # content=gender_bias_example2\n",
+    "        # content=calculator_example,\n",
+    "        content=gender_bias_example\n",
     "    )\n",
     "]\n",
     "\n",
@@ -369,12 +369,67 @@
     ")\n",
     "\n",
     "openai = OpenAICompletion(configs=model_config, \n",
-    "                        #   system=GENDER_BIAS_CLASSIFIER_DESCRIPTION,\n",
+    "                          system=GENDER_BIAS_CLASSIFIER_DESCRIPTION,\n",
     "                          tools=[GENDER_BIAS_MULTI_LABEL_CLASSIFIER, CALCULATOR])\n",
     "\n",
     "text, response = openai.get_answer(msgs)\n",
     "\n",
     "print(\"text:\", text)\n",
+    "response"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "text I'll help analyze this text for gender biases and also verify the calculation mentioned. Let me break this down:\n",
+      "\n",
+      "1. First, let's check for gender biases in the text as it contains several concerning statements:\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "{'id': 'msg_014EhRuV4WETKdjVN7TzLNUs',\n",
+       " 'type': 'message',\n",
+       " 'role': 'assistant',\n",
+       " 'model': 'claude-3-5-sonnet-20241022',\n",
+       " 'content': [{'type': 'text',\n",
+       "   'text': \"I'll help analyze this text for gender biases and also verify the calculation mentioned. Let me break this down:\\n\\n1. First, let's check for gender biases in the text as it contains several concerning statements:\"},\n",
+       "  {'type': 'tool_use',\n",
+       "   'id': 'toolu_01BeEkHy2TP3BW7PhVdaPZzz',\n",
+       "   'name': 'gender_bias_classifier',\n",
+       "   'input': {'bias_label': ['STEREOTYPING_BIAS', 'SEXISM', 'SEMANTIC_BIAS'],\n",
+       "    'bias_text': ['Debe ser profesora de preescolar porque enseña super bien',\n",
+       "     'no creo que sea ingenieria porque a las mujeres no les gusta eso',\n",
+       "     'La karencita es tan tierna'],\n",
+       "    'score_label': [0.95, 0.98, 0.85]}}],\n",
+       " 'stop_reason': 'tool_use',\n",
+       " 'stop_sequence': None,\n",
+       " 'usage': {'input_tokens': 1392,\n",
+       "  'cache_creation_input_tokens': 0,\n",
+       "  'cache_read_input_tokens': 0,\n",
+       "  'output_tokens': 223}}"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "antrophic = AntrophicCompletion(configs=model_config,\n",
+    "                                system=GENDER_BIAS_CLASSIFIER_DESCRIPTION,\n",
+    "                                tools=[GENDER_BIAS_MULTI_LABEL_CLASSIFIER, CALCULATOR])\n",
+    "\n",
+    "text, response = antrophic.get_answer(msgs)\n",
+    "\n",
+    "print(\"text\", text)\n",
     "response"
    ]
   },
