update bertscore-casual with global results

--- a/notebooks/eval/bertscore-casual.ipynb
+++ b/notebooks/eval/bertscore-casual.ipynb
@@ -287,24 +287,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<human>: ¿Puedes reescribir el siguiente texto sin sesgo de género?\n",
-      "    Estimada comunidad beauchefiana: ¿Tienes papeles acumulados en tu casa?\n",
-      "    <assistant>: Estimada comunidad beauchefiana: ¿Tienes papeles acumulados en tu casa?\n",
-      "    <assistant>:\n"
+      "PREDICTION: Estimada comunidad beauchefiana : ¿Tienes papeles acumulados en tu casa ?\n",
+      "REFERENCE Estimada comunidad beauchefiana : ¿Tienes papeles acumulados en tu casa ? \n",
+      "\n",
+      "PREDICTION: Desde hoy y hasta el 19 de diciembre puedes deshacerte de ellos y reciclarlos con ReBeauchef .\n",
+      "REFERENCE Desde hoy y hasta el 19 de diciembre puedes deshacerte de ellos y reciclarlos con ReBeauchef . \n",
+      "\n",
+      "PREDICTION: Revisa en el afiche qué tipo de papeles puedes traer , los estarán recibiendo en el edificio Escuela , bajo la escalera principal .\n",
+      "REFERENCE Revisa en el afiche qué tipo de papeles puedes traer , los estarán recibiendo en el edificio Escuela , bajo la escalera principal . \n",
+      "\n"
      ]
     }
    ],
    "source": [
-    "predictions = df['generation']\n",
+    "import ast\n",
     "\n",
-    "print(predictions[0])"
+    "make_str = lambda text: ' '.join(ast.literal_eval(text))\n",
+    "\n",
+    "predictions = df['generated_tokens'].apply(make_str)\n",
+    "references = df['reference_tokens'].apply(lambda text: ' '.join(ast.literal_eval(text)[0])\n",
+    ")\n",
+    "\n",
+    "for i in range(3):\n",
+    "    print('PREDICTION:',predictions[i])\n",
+    "    print('REFERENCE',references[i],'\\n')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "results = bertscore.compute(predictions=predictions, references=references, model_type=\"bert-base-multilingual-cased\")"
    ]
   },
   {
@@ -316,23 +338,28 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<human>: ¿Puedes reescribir el siguiente texto sin sesgo de género?\n",
-      "    Desde hoy y hasta el 19 de diciembre puedes deshacerte de ellos y reciclarlos con ReBeauchef.\n",
-      "    <assistant>: Desde hoy y hasta el 19 de diciembre puedes deshacerte de ellos y reciclarlos con ReBeauchef.\n",
-      "    <assistant>: Desde\n"
+      "precision \n",
+      "\tmean: 0.9972797733591036\n",
+      "\tstd: 0.012501423579440172\n",
+      "\n",
+      "recall \n",
+      "\tmean: 0.9961144370801004\n",
+      "\tstd: 0.019588417908933536\n",
+      "\n",
+      "f1 \n",
+      "\tmean: 0.9966465265244779\n",
+      "\tstd: 0.015847489328869542\n",
+      "\n"
      ]
     }
    ],
    "source": [
-    "print(predictions[1])"
+    "import numpy as np\n",
+    "\n",
+    "for k in results.keys():\n",
+    "    if not k == 'hashcode':\n",
+    "        print(f'{k}',f'\\n\\tmean: {np.mean(results[k])}\\n\\tstd: {np.std(results[k])}\\n')"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
