--- a/notebooks/eval/bertscore-casual.ipynb
+++ b/notebooks/eval/bertscore-casual.ipynb
@@ -230,24 +230,29 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/camilo/miniconda3/envs/debiasing/lib/python3.11/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-      "  from .autonotebook import tqdm as notebook_tqdm\n"
-     ]
+     "data": {
+      "text/plain": [
+       "Counter({1: 720, 7: 16, 6: 15, 8: 13, 5: 6, 2: 5, 4: 4, 3: 3})"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "from evaluate import load\n",
-    "bertscore = load(\"bertscore\")"
+    "import ast\n",
+    "from collections import Counter\n",
+    "\n",
+    "df['target'] = df['target'].apply(lambda text: ast.literal_eval(text))\n",
+    "Counter([len(t) for t in df['target']])"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Example"
+    "Notice that the target either keeps the original text or corrects the bias in one of the several possible ways. We will separate the dataframe in a way that each one of them becomes a separate candidate for the evaluation."
    ]
   },
   {
@@ -256,20 +261,59 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "references = ['Estimada comunidad beauchefiana: ¿Tienes papeles acumulados en tu casa?']\n",
-    "predictions = ['Estimada comunidad beauchefiana: ¿Tienes papeles acumulados en tu casa?']"
+    "df['ID_row'] = df.index  # column to keep track of the original row\n",
+    "df = df.explode('target', ignore_index=True)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
+   "outputs": [],
+   "source": [
+    "get_gen = lambda text: text.split('\\n')[2].replace('    <assistant>: ','')\n",
+    "df['output'] = df['generation'].apply(get_gen)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Example\n",
+    "\n",
+    "There are potentially many options for replacing a biased text. We will consider the highest similarity among all candidate options."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "references = ['Estimad@s estudiantes de Pregrado,Junto con saludar les invitamos al OPEN MDS, charla Abierta para conocer los detalles del Magíster en Ciencia de Datos MDS de nuestra Facultad el cual es articulable con las carreras de pregrado FCFM.', 'Estimados/as estudiantes de Pregrado,Junto con saludar les invitamos al OPEN MDS, charla Abierta para conocer los detalles del Magíster en Ciencia de Datos MDS de nuestra Facultad el cual es articulable con las carreras de pregrado FCFM.', 'Estimadas/os estudiantes de Pregrado,Junto con saludar les invitamos al OPEN MDS, charla Abierta para conocer los detalles del Magíster en Ciencia de Datos MDS de nuestra Facultad el cual es articulable con las carreras de pregrado FCFM.', 'Estimados y estimadas estudiantes de Pregrado,Junto con saludar les invitamos al OPEN MDS, charla Abierta para conocer los detalles del Magíster en Ciencia de Datos MDS de nuestra Facultad el cual es articulable con las carreras de pregrado FCFM.', 'Estimadas y estimados estudiantes de Pregrado,Junto con saludar les invitamos al OPEN MDS, charla Abierta para conocer los detalles del Magíster en Ciencia de Datos MDS de nuestra Facultad el cual es articulable con las carreras de pregrado FCFM.', 'Estimados(as) estudiantes de Pregrado,Junto con saludar les invitamos al OPEN MDS, charla Abierta para conocer los detalles del Magíster en Ciencia de Datos MDS de nuestra Facultad el cual es articulable con las carreras de pregrado FCFM.', 'Estimadas(os) estudiantes de Pregrado,Junto con saludar les invitamos al OPEN MDS, charla Abierta para conocer los detalles del Magíster en Ciencia de Datos MDS de nuestra Facultad el cual es articulable con las carreras de pregrado FCFM.']\n",
+    "predictions = ['Estimada Comunidad de Pregrado,Junto con saludar les invitamos al OPEN MDS, charla Abierta para conocer los detalles del Magíster en Ciencia de Datos MDS de nuestra Facultad el cual es articulable con las carreras de pregrado FCFM.' for _ in references]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from evaluate import load\n",
+    "bertscore = load(\"bertscore\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'precision': [1.0], 'recall': [1.0], 'f1': [1.0], 'hashcode': 'bert-base-multilingual-cased_L9_no-idf_version=0.3.12(hug_trans=4.47.1)'}\n"
+      "{'precision': [0.9773577451705933, 0.9740340709686279, 0.9773645997047424, 0.9707762598991394, 0.9730334877967834, 0.9715868234634399, 0.9754259586334229], 'recall': [0.9639482498168945, 0.9562501907348633, 0.9597264528274536, 0.9487558603286743, 0.952041506767273, 0.9467052221298218, 0.9509559869766235], 'f1': [0.9706066846847534, 0.9650602340698242, 0.9684652090072632, 0.9596397876739502, 0.9624230265617371, 0.9589846134185791, 0.963035523891449], 'hashcode': 'bert-base-multilingual-cased_L9_no-idf_version=0.3.12(hug_trans=4.47.1)'}\n"
      ]
     }
    ],
@@ -282,56 +326,111 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "The results are very similar since the difference is only a few tokens. We'll subtract the value obtained between the original input (potentially biased) and the candidates. Notice that when the input is unbised then the strings should coincide (making the BERTscore, ROUGE, BLEU values equal to zero)."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "inputs = ['Estimados estudiantes de Pregrado,Junto con saludar les invitamos al OPEN MDS, charla Abierta para conocer los detalles del Magíster en Ciencia de Datos MDS de nuestra Facultad el cual es articulable con las carreras de pregrado FCFM.' for _ in references]\n",
+    "results_input = bertscore.compute(predictions=inputs, references=references, model_type=\"bert-base-multilingual-cased\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[-0.01429903507232666,\n",
+       " -0.020494282245635986,\n",
+       " -0.01409846544265747,\n",
+       " -0.023262202739715576,\n",
+       " -0.016454339027404785,\n",
+       " -0.025037288665771484,\n",
+       " -0.017160356044769287]"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "[results['f1'][i]-results_input['f1'][i] for i in range(len(results['f1']))]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Full evaluation"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "PREDICTION: Estimada comunidad beauchefiana : ¿Tienes papeles acumulados en tu casa ?\n",
-      "REFERENCE Estimada comunidad beauchefiana : ¿Tienes papeles acumulados en tu casa ? \n",
-      "\n",
-      "PREDICTION: Desde hoy y hasta el 19 de diciembre puedes deshacerte de ellos y reciclarlos con ReBeauchef .\n",
-      "REFERENCE Desde hoy y hasta el 19 de diciembre puedes deshacerte de ellos y reciclarlos con ReBeauchef . \n",
-      "\n",
-      "PREDICTION: Revisa en el afiche qué tipo de papeles puedes traer , los estarán recibiendo en el edificio Escuela , bajo la escalera principal .\n",
-      "REFERENCE Revisa en el afiche qué tipo de papeles puedes traer , los estarán recibiendo en el edificio Escuela , bajo la escalera principal . \n",
-      "\n"
-     ]
-    }
-   ],
-   "source": [
-    "import ast\n",
-    "\n",
-    "make_str = lambda text: ' '.join(ast.literal_eval(text))\n",
-    "\n",
-    "predictions = df['generated_tokens'].apply(make_str)\n",
-    "references = df['reference_tokens'].apply(lambda text: ' '.join(ast.literal_eval(text)[0])\n",
-    ")\n",
-    "\n",
-    "for i in range(3):\n",
-    "    print('PREDICTION:',predictions[i])\n",
-    "    print('REFERENCE',references[i],'\\n')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
-    "results = bertscore.compute(predictions=predictions, references=references, model_type=\"bert-base-multilingual-cased\")"
+    "results = bertscore.compute(predictions=df['output'], references=df['target'], model_type=\"bert-base-multilingual-cased\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df['precision'] = results['precision']\n",
+    "df['recall'] = results['recall']\n",
+    "df['f1'] = results['f1']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def filter_best_scores(df, id_column, score_column):\n",
+    "    \"\"\"\n",
+    "    Reduces the dataframe to only the rows with the best score for each ID.\n",
+    "\n",
+    "    Parameters:\n",
+    "    - df (pd.DataFrame): The original dataframe\n",
+    "    - id_column (str): Name of the column containing unique IDs\n",
+    "    - score_column (str): Name of the column containing the scores\n",
+    "\n",
+    "    Returns:\n",
+    "    - pd.DataFrame: A filtered dataframe with the best score per ID\n",
+    "    \"\"\"\n",
+    "    # Find the maximum score for each ID_row\n",
+    "    best_scores = df.groupby(id_column)[score_column].transform('max')\n",
+    "    \n",
+    "    # Filter the rows where the score matches the maximum score for each ID_row\n",
+    "    filtered_df = df[df[score_column] == best_scores].copy(deep=True)\n",
+    "    \n",
+    "    return filtered_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_results = filter_best_scores(df, 'ID_row', 'f1')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -339,16 +438,16 @@
      "output_type": "stream",
      "text": [
       "precision \n",
-      "\tmean: 0.9972797733591036\n",
-      "\tstd: 0.012501423579440172\n",
+      "\tmean: 0.9984012772817441\n",
+      "\tstd: 0.008954700796637778\n",
       "\n",
       "recall \n",
-      "\tmean: 0.9961144370801004\n",
-      "\tstd: 0.019588417908933536\n",
+      "\tmean: 0.997340931459461\n",
+      "\tstd: 0.0178454148136428\n",
       "\n",
       "f1 \n",
-      "\tmean: 0.9966465265244779\n",
-      "\tstd: 0.015847489328869542\n",
+      "\tmean: 0.9978308397943102\n",
+      "\tstd: 0.013742493489760968\n",
       "\n"
      ]
     }
@@ -358,7 +457,62 @@
     "\n",
     "for k in results.keys():\n",
     "    if not k == 'hashcode':\n",
-    "        print(f'{k}',f'\\n\\tmean: {np.mean(results[k])}\\n\\tstd: {np.std(results[k])}\\n')"
+    "        print(f'{k}',f'\\n\\tmean: {np.mean(df_results[k])}\\n\\tstd: {np.std(df_results[k])}\\n')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Subtracting input"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "results_input = bertscore.compute(\n",
+    "    predictions=df_results['input'],\n",
+    "    references=df_results['target'], model_type=\"bert-base-multilingual-cased\")\n",
+    "df_results['precision_input'] = results_input['precision']\n",
+    "df_results['recall_input'] = results_input['recall']\n",
+    "df_results['f1_input'] = results_input['f1']\n",
+    "\n",
+    "df_results['precision_diff'] = df_results['precision'] - df_results['precision_input']\n",
+    "df_results['recall_diff'] = df_results['recall'] - df_results['recall_input']\n",
+    "df_results['f1_diff'] = df_results['f1'] - df_results['f1_input']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "precision \n",
+      "\tmean (diff): -0.000559201325906817\n",
+      "\tstd (diff): 0.00801560095078384\n",
+      "\n",
+      "recall \n",
+      "\tmean (diff): -0.00044103915734059363\n",
+      "\tstd (diff): 0.0179361198875062\n",
+      "\n",
+      "f1 \n",
+      "\tmean (diff): -0.0005302721886988491\n",
+      "\tstd (diff): 0.01339388807917294\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "for k in results.keys():\n",
+    "    if not k == 'hashcode':\n",
+    "        print(f'{k}',f\"\\n\\tmean (diff): {np.mean(df_results[k+'_diff'])}\\n\\tstd (diff): {np.std(df_results[k+'_diff'])}\\n\")"
    ]
   }
  ],
