--- a/notebooks/agent/agent.ipynb
+++ b/notebooks/agent/agent.ipynb
@@ -4,12 +4,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Agent\n"
+    "# Debiaser agent\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,7 +26,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We will create an agent with the capabilities to debiasing a gender biased text. So the task is to process any text, detect which (if any) parts of the text contain a gender bias, and then proposed debiased alternatives for that text. For that purpose we will use two tools:\n",
+    "We will create an agent named `Debiaser` with the capabilities to debiasing a gender biased text. So the task is to process any text, detect which (if any) parts of the text contain a gender bias, and then proposed debiased alternatives for that text. For that purpose we will use two tools:\n",
     "\n",
     "1. `GENDER_BIAS_MULTI_LABEL_CLASSIFIER`: a kind of NER-multilabel classifier tool that detect text within a paragraph for a set of possible gender biases.\n",
     "\n",
@@ -49,23 +49,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2025-01-06 00:39:49 - debiasing.configs - INFO - LLM Anthropic response: {\"id\":\"msg_01WC677Qpig1sb3gUo3oZgsm\",\"type\":\"message\",\"role\":\"assistant\",\"model\":\"claude-3-5-sonnet-20241022\",\"content\":[{\"type\":\"text\",\"text\":\"Lo siento, pero noto que estás escribiendo en español. Soy capaz de entender español, pero las herramientas que tengo disponibles están diseñadas para analizar y trabajar con textos en inglés, específicamente para detectar y corregir sesgos de género en textos en inglés.\\n\\nPara poder ayudarte mejor, te sugiero que:\\n1. Me escribas el texto que quieres analizar en inglés, o\\n2. Me especifiques claramente qué quieres hacer (en español o inglés) y te puedo guiar sobre cómo proceder.\\n\\n¿Te gustaría reformular tu consulta con un texto específico en inglés que quieras analizar para sesgos de género?\\n\\n(I notice you're writing in Spanish. While I can understand Spanish, the tools I have available are designed to analyze and work with English texts, specifically for detecting and correcting gender biases in English text. Would you like to rephrase your query with a specific English text you'd like to analyze for gender bias?)\"}],\"stop_reason\":\"end_turn\",\"stop_sequence\":null,\"usage\":{\"input_tokens\":1742,\"cache_creation_input_tokens\":0,\"cache_read_input_tokens\":0,\"output_tokens\":244}}\n"
+      "2025-01-06 00:51:51 - debiasing.configs - INFO - LLM Anthropic response: {\"id\":\"msg_01HK3GJJEyKo72BnvRdzpaKu\",\"type\":\"message\",\"role\":\"assistant\",\"model\":\"claude-3-5-sonnet-20241022\",\"content\":[{\"type\":\"text\",\"text\":\"I'll help analyze this text for gender biases and then provide a debiased version. Let's first detect the biases present:\"},{\"type\":\"tool_use\",\"id\":\"toolu_01Cp8LFpjo3ukxrJNQqUkf3i\",\"name\":\"gender_bias_classifier\",\"input\":{\"bias_label\":[\"STEREOTYPING_BIAS\",\"SEXISM\"],\"bias_text\":[\"Debe ser profesora de preescolar porque enseña super bien sumas\",\"no creo que sea ingenieria porque a las mujeres no les gusta eso\"],\"score_label\":[0.95,0.98]}}],\"stop_reason\":\"tool_use\",\"stop_sequence\":null,\"usage\":{\"input_tokens\":1808,\"cache_creation_input_tokens\":0,\"cache_read_input_tokens\":0,\"output_tokens\":186}}\n",
+      "2025-01-06 00:51:51 - debiasing.configs - INFO - LLM Response: {'id': 'msg_01HK3GJJEyKo72BnvRdzpaKu', 'type': 'message', 'role': 'assistant', 'model': 'claude-3-5-sonnet-20241022', 'content': [{'type': 'text', 'text': \"I'll help analyze this text for gender biases and then provide a debiased version. Let's first detect the biases present:\"}, {'type': 'tool_use', 'id': 'toolu_01Cp8LFpjo3ukxrJNQqUkf3i', 'name': 'gender_bias_classifier', 'input': {'bias_label': ['STEREOTYPING_BIAS', 'SEXISM'], 'bias_text': ['Debe ser profesora de preescolar porque enseña super bien sumas', 'no creo que sea ingenieria porque a las mujeres no les gusta eso'], 'score_label': [0.95, 0.98]}}], 'stop_reason': 'tool_use', 'stop_sequence': None, 'usage': {'input_tokens': 1808, 'cache_creation_input_tokens': 0, 'cache_read_input_tokens': 0, 'output_tokens': 186}}\n",
+      "2025-01-06 00:51:51 - debiasing.configs - INFO - Debiaser tool detected\n",
+      "2025-01-06 00:51:51 - debiasing.configs - INFO - Analyzing the previous text I have the following information about gender biases:\n",
+      "The text 'Debe ser profesora de preescolar porque enseña super bien sumas' contains STEREOTYPING_BIAS with score 0.95\n",
+      "The text 'no creo que sea ingenieria porque a las mujeres no les gusta eso' contains SEXISM with score 0.98\n",
+      "\n",
+      "2025-01-06 00:51:58 - debiasing.configs - INFO - LLM Anthropic response: {\"id\":\"msg_01Moi5xNTXiZHMmt51mykHV7\",\"type\":\"message\",\"role\":\"assistant\",\"model\":\"claude-3-5-sonnet-20241022\",\"content\":[{\"type\":\"text\",\"text\":\"I'll use the debiaser tool to create a gender-neutral version of the text that removes these stereotypical and sexist biases.\"},{\"type\":\"tool_use\",\"id\":\"toolu_01PNvnTXJfLH2Yr5DcxApbBj\",\"name\":\"debiaser\",\"input\":{\"debiasing_text\":\"Karen es muy buena enseñando. Tiene talento para explicar matemáticas como sumas básicas (2 + 3). Podría desempeñarse en cualquier campo profesional que desee, ya sea en educación o ingeniería, pues las habilidades y gustos no están determinados por el género.\",\"reasoning\":[\"Removed the diminutive 'karencita' which can be condescending and used the proper name 'Karen'\",\"Eliminated the assumption that teaching ability automatically means someone should be a preschool teacher\",\"Removed gender stereotyping about teaching being a feminine profession\",\"Eliminated the sexist assumption that women don't like engineering\",\"Reframed the text to focus on individual abilities and choices rather than gender-based assumptions\",\"Added a statement that reinforces that professional abilities and interests are not determined by gender\"]}}],\"stop_reason\":\"tool_use\",\"stop_sequence\":null,\"usage\":{\"input_tokens\":1909,\"cache_creation_input_tokens\":0,\"cache_read_input_tokens\":0,\"output_tokens\":299}}\n",
+      "2025-01-06 00:51:58 - debiasing.configs - INFO - Removed the diminutive 'karencita' which can be condescending and used the proper name 'Karen'\n",
+      "2025-01-06 00:51:58 - debiasing.configs - INFO - Eliminated the assumption that teaching ability automatically means someone should be a preschool teacher\n",
+      "2025-01-06 00:51:58 - debiasing.configs - INFO - Removed gender stereotyping about teaching being a feminine profession\n",
+      "2025-01-06 00:51:58 - debiasing.configs - INFO - Eliminated the sexist assumption that women don't like engineering\n",
+      "2025-01-06 00:51:58 - debiasing.configs - INFO - Reframed the text to focus on individual abilities and choices rather than gender-based assumptions\n",
+      "2025-01-06 00:51:58 - debiasing.configs - INFO - Added a statement that reinforces that professional abilities and interests are not determined by gender\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "'UNBIASED'"
+       "'Karen es muy buena enseñando. Tiene talento para explicar matemáticas como sumas básicas (2 + 3). Podría desempeñarse en cualquier campo profesional que desee, ya sea en educación o ingeniería, pues las habilidades y gustos no están determinados por el género.'"
       ]
      },
-     "execution_count": 66,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -81,7 +94,7 @@
     "    \"porque a las mujeres no les gusta eso\"\n",
     ")\n",
     "\n",
-    "input_text = \"Hola, cómo estas?\"\n",
+    "# input_text = \"Hola, cómo estas?\"\n",
     "\n",
     "msgs = [\n",
     "    LLMMessage(\n",
